tests/paczka1/small_fuzzy/46178972.err
Error in line 9: S564 A897 45,9
Error in line 15: R4eGy A897 33,7
